1. When brands will try to send request to the celebrity then show confirmation message pop up 2. If celebrity or brands deleted from admin section then show Message in Celbrity Message table

--- a/app/assets/stylesheets/brands-explore.css
+++ b/app/assets/stylesheets/brands-explore.css
@@ -290,7 +290,7 @@
     width: 111px;
 }
 
-.influencer-profile-modal input {
+.influencer-profile-modal input[type=text] {
     background-color: white;
     padding: 4px;
 }
