--- a/app/views/campaign_mailer/notify_campaign_pause.html.erb
+++ b/app/views/campaign_mailer/notify_campaign_pause.html.erb
@@ -8,7 +8,7 @@
 <h4> Your campaign has been paused. Details are below: </h4>
 
 <h5><p><%= @message %></p></h5>
-<p><h5>Campaign name: <strong><%= @campaign.name %></strong></h5></p>
+<p>Campaign name: <strong><%= @campaign.name %></strong></p>
 <p>Brand email address: <strong><%= @brand.email.present? ? @brand.email : 'NA' %></strong></p>
 <p>Brand phone: <strong><%= @brand.phone.present? ? @brand.phone : 'NA' %></strong></p>
 <p>Brand address: <strong><%= @brand.full_address.present? ? @brand.full_address : 'NA' %></strong></p>
