--- a/app/views/campaign_mailer/campaign_accept_notification.html.erb
+++ b/app/views/campaign_mailer/campaign_accept_notification.html.erb
@@ -7,7 +7,7 @@
 
 <h4> Your campaign has been accepted. Campaign details are below: </h4>
 
-<p><h5>Campaign name: <strong><%= @campaign.name %></strong></h5></p>
+<p>Campaign name: <strong><%= @campaign.name %></strong></p>
 <p>Acceptor's email address: <strong><%= @campaign.receiver.email.present? ? @campaign.receiver.email : 'NA' %></strong></p>
 <p>Acceptor's phone: <strong><%= @campaign.receiver.phone.present? ? @campaign.receiver.phone : 'NA' %></strong></p>
 <p>Acceptor's address: <strong><%= @campaign.receiver.full_address.present? ? @campaign.receiver.full_address : 'NA' %></strong></p>
