--- a/app/views/layouts/public.html.erb
+++ b/app/views/layouts/public.html.erb
@@ -41,19 +41,19 @@
       </p>
       <div class="socialmedia">
         <div class="fb-twitter">
-          <a href="https://www.facebook.com/Thebrandreach-1706253322929246/">
+          <a href="https://www.facebook.com/Thebrandreach-1706253322929246/" target="_blank">
             <i class="fa fa-lg fa-facebook"></i>
           </a>
           <span class="space"></span>
-          <a href="https://twitter.com/BrandReach1">
+          <a href="https://twitter.com/BrandReach1" target="_blank">
             <i class="fa fa-lg fa-twitter"></i>
           </a>
           <span class="space"></span>
-          <a href="#">
+          <a href="#" target="_blank">
             <i class="fa fa-lg fa-linkedin"></i>
           </a>
           <span class="space"></span>
-          <a href="#">
+          <a href="#" target="_blank">
             <i class="fa fa-lg fa-google-plus"></i>
           </a>
         </div>
