--- a/app/views/shared/_footer_other_page.erb
+++ b/app/views/shared/_footer_other_page.erb
@@ -6,19 +6,19 @@
     </div>
     <div class="col-md-3 col-sm-3  col-xs-12 col-md-offset-3 col-sm-offset-3 footer-info-padding">
       <div class="fb-twitter">
-        <a href="https://www.facebook.com/Thebrandreach-1706253322929246/">
+        <a href="https://www.facebook.com/Thebrandreach-1706253322929246/" target="_blank">
           <i class="fa fa-lg fa-facebook"></i>
         </a>
         <span class="space"></span>
-        <a href="https://twitter.com/BrandReach1">
+        <a href="https://twitter.com/BrandReach1" target="_blank">
           <i class="fa fa-lg fa-twitter"></i>
         </a>
         <span class="space"></span>
-        <a href="#">
+        <a href="#" target="_blank">
           <i class="fa fa-lg fa-linkedin"></i>
         </a>
         <span class="space"></span>
-        <a href="#">
+        <a href="#" target="_blank">
           <i class="fa fa-lg fa-google-plus"></i>
         </a>
       </div>
