All brands logo in home page edited into higher resolution and added in to brand page

--- a/app/views/public/brand_home.html.erb
+++ b/app/views/public/brand_home.html.erb
@@ -77,11 +77,11 @@
   <div class="wrapper-content">
     <div class="text-top few-brand helvetica-neue-light">Few of our Brands</div>
     <div class="brands-block">
-      <span><a href="#" data-toggle="popover" title="Eagleboys Pizza"><%= image_tag('Brand1.png') %></a></span>
-      <span><a href="#" data-toggle="popover" title="Demo"><%= image_tag('Brand2.png') %></a></span>
-      <span><a href="#" data-toggle="popover" title="Cream Stone"><%= image_tag('Brand3.png') %></a></span>
-      <span><a href="#" data-toggle="popover" title="Harley Davidson"><%= image_tag('Brand4.png') %></a></span>
-      <span><a href="#" data-toggle="popover" title="Airtel"><%= image_tag('Brand5.png') %></a></span>
+      <span><a href="#" data-toggle="popover" title="BabyAha.com"><%= image_tag('baby_aha.png', :class => 'influencers-picture') %></a></span>
+      <span><a href="#" data-toggle="popover" title="JustFix.com"><%= image_tag('just_fix.png', :class => 'influencers-picture') %></a></span>
+      <span><a href="#" data-toggle="popover" title="Mediciti Hospitals"><%= image_tag('medi_citi.png', :class => 'influencers-picture') %></a></span>
+      <span><a href="#" data-toggle="popover" title="The Birthplace"><%= image_tag('the_birthplace.png', :class => 'influencers-picture') %></a></span>
+      <span><a href="#" data-toggle="popover" title="W3 Restaurant"><%= image_tag('w3_restaurant.png', :class => 'influencers-picture') %></a></span>
     </div>
   </div>
 </div>
