--- a/app/views/public/brand_home.html.erb
+++ b/app/views/public/brand_home.html.erb
@@ -77,11 +77,11 @@
   <div class="wrapper-content">
     <div class="text-top few-brand helvetica-neue-light">Few of our Brands</div>
     <div class="brands-block">
-      <span><a href="#" data-toggle="popover" title="BabyAha.com"><%= image_tag('baby_aha.png', :class => 'influencers-picture') %></a></span>
-      <span><a href="#" data-toggle="popover" title="JustFix.com"><%= image_tag('just_fix.png', :class => 'influencers-picture') %></a></span>
-      <span><a href="#" data-toggle="popover" title="Mediciti Hospitals"><%= image_tag('medi_citi.png', :class => 'influencers-picture') %></a></span>
-      <span><a href="#" data-toggle="popover" title="The Birthplace"><%= image_tag('the_birthplace.png', :class => 'influencers-picture') %></a></span>
-      <span><a href="#" data-toggle="popover" title="W3 Restaurant"><%= image_tag('w3_restaurant.png', :class => 'influencers-picture') %></a></span>
+      <span><a href="http://www.justfix.com/" data-toggle="popover" target="_blank" title="JustFix.com"><%= image_tag('just_fix.png', :class => 'influencers-picture') %></a></span>
+      <span><a href="http://www.babyaha.com/" data-toggle="popover" target="_blank" title="BabyAha.com"><%= image_tag('baby_aha.png', :class => 'influencers-picture') %></a></span>
+      <span><a href="http://www.theforumexperience.com/" data-toggle="popover" target="_blank" title="The Forum"><%= image_tag('the_forum.png', :class => 'influencers-picture') %></a></span>
+      <span><a href="http://www.thebirthplace.com/" data-toggle="popover" target="_blank" title="The Birthplace"><%= image_tag('the_birthplace.png', :class => 'influencers-picture') %></a></span>
+      <span><a href="https://www.facebook.com/WorldWeWish/" data-toggle="popover" target="_blank" title="W3 Restaurant"><%= image_tag('w3_restaurant.png', :class => 'influencers-picture') %></a></span>
     </div>
   </div>
 </div>
