1. Taj hotel image in re sized and converted into png format 2. New brand Taj hotel added into brands home page with link

--- a/app/views/public/brand_home.html.erb
+++ b/app/views/public/brand_home.html.erb
@@ -81,7 +81,7 @@
       <span><a href="http://www.babyaha.com/" data-toggle="popover" target="_blank" title="BabyAha.com"><%= image_tag('baby_aha.png', :class => 'influencers-picture') %></a></span>
       <span><a href="http://www.theforumexperience.com/" data-toggle="popover" target="_blank" title="The Forum"><%= image_tag('the_forum.png', :class => 'influencers-picture') %></a></span>
       <span><a href="http://www.thebirthplace.com/" data-toggle="popover" target="_blank" title="The Birthplace"><%= image_tag('the_birthplace.png', :class => 'influencers-picture') %></a></span>
-      <span><a href="https://www.facebook.com/WorldWeWish/" data-toggle="popover" target="_blank" title="W3 Restaurant"><%= image_tag('w3_restaurant.png', :class => 'influencers-picture') %></a></span>
+      <span><a href=" https://www.tajhotels.com/en-in/home/" data-toggle="popover" target="_blank" title="Taj Hotel"><%= image_tag('taj_hotel.png', :class => 'influencers-picture') %></a></span>
     </div>
   </div>
 </div>
