1. Added description meta tag for SEO optimization 2. Added keyword meta tag for SEO optimization

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,6 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="author" content="Md Swawibe Ul Alam">
+  <meta name="description" content="Be an influencer and advocate brands you love, Enlist top creators & influencers to leverage your brand">
+  <meta name="keywords" content="influencer, influencers, brand, brands, login, brandreach, identity, leverage, scale, measure, technology, brand reach">
   <title><%= yield(:title) %></title>
   <%= favicon_link_tag 'favicon.ico' %>
   <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet">
