--- a/app/assets/stylesheets/influencers_home.scss
+++ b/app/assets/stylesheets/influencers_home.scss
@@ -134,7 +134,7 @@
   margin-top: 62px;
 }
 
-.identity .text-lower {
+.identity .text-lower, .indentity .text-lower-identity {
   letter-spacing: -0.6px;
 }
 
