--- a/app/views/public/brand_home.html.erb
+++ b/app/views/public/brand_home.html.erb
@@ -5,12 +5,12 @@
 <div class="identity">
   <div class="wrapper-content">
     <div class="text-upper">
-      <div class="text-upper-identity">Identify, Initiate,</div>
-      <div class="text-upper-identity">Inspire.</div>
+      <h1 class="text-upper-identity">Identify, Initiate,</h1>
+      <h1 class="text-upper-identity">Inspire.</h1>
     </div>
     <div class="text-lower">
-      <div class="text-lower-identity">Enlist top creators & influencers to</div>
-      <div class="text-lower-identity">leverage your brand.</div>
+      <h2 class="text-lower-identity">Enlist top creators & influencers to</h2>
+      <h2 class="text-lower-identity">leverage your brand.</h2>
     </div>
   </div>
 </div>
