--- a/app/views/public/home.html.erb
+++ b/app/views/public/home.html.erb
@@ -5,10 +5,10 @@
 <div class="identity" xmlns="http://www.w3.org/1999/html">
   <div class="wrapper-content">
     <div class="text-upper">
-      <div class="text-upper-identity">Get Listed,</div>
+      <h1 class="text-upper-identity">Get Listed,</h1>
     </div>
     <div class="text-lower">
-      <div class="text-lower-identity influencer-text">Be an influencer and advocate brands you love.</div>
+      <h2 class="text-lower-identity influencer-text">Be an influencer and advocate brands you love.</h2>
     </div>
   </div>
 </div>
