Key word change for SEO

--- a/app/views/layouts/public.html.erb
+++ b/app/views/layouts/public.html.erb
@@ -5,7 +5,7 @@
   <%= favicon_link_tag 'favicon.ico' %>
   <meta name="author" content="Md Swawibe Ul Alam">
   <meta name="description" content="Be an influencer and advocate brands you love, Enlist top creators & influencers to leverage your brand">
-  <meta name="keywords" content="influencer, influencers, brand, brands, login, brandreach, identity, leverage, scale, measure, technology, brand reach">
+  <meta name="keywords" content="influencer, influencers, brand, brands, login, identify, leverage, scale, measure, technology, brand reach">
   <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet">
   <%= stylesheet_link_tag 'application.css', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
