--- a/app/views/campaigns/new.html.erb
+++ b/app/views/campaigns/new.html.erb
@@ -128,7 +128,7 @@
 
                     <div>
                       <%= f.label :end_date, 'End' %>
-                      <%= f.text_field :end_date, { value: (Time.now + 1.month).strftime('%d/%m/%Y'), class: 'end_date', disabled: 'disabled'} %>
+                      <%= f.text_field :end_date, { value: (Time.now + 23.days).strftime('%d/%m/%Y'), class: 'end_date', disabled: 'disabled'} %>
                       <%= text_field_tag 'end_time',  Time.now.strftime('%I:%M %P'), class: 'end_time' %>
                     </div>
                   </div>
