Code refactored for fast loading of amchart

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,8 @@
   <%= stylesheet_link_tag 'sweetalert', media: 'all' %>
   <%= javascript_include_tag 'application' %>
   <%= javascript_include_tag 'sweetalert.min' %>
+  <%= javascript_include_tag 'ammap/amcharts' %>
+  <%= javascript_include_tag 'ammap/serial' %>
   <link href='http://fonts.googleapis.com/css?family=Raleway:500,600,700,100,200,300,400,800,900' rel='stylesheet' type='text/css'>
   <link href='http://fonts.googleapis.com/css?family=Hind' rel='stylesheet' type='text/css'>
   <%= csrf_meta_tag %>
