Seo optimization: Page title name changed

--- a/app/views/public/brand_home.html.erb
+++ b/app/views/public/brand_home.html.erb
@@ -1,6 +1,6 @@
 <%= stylesheet_link_tag 'brands_home', media: 'all', 'data-turbolinks-track' => true %>
 
-<% title 'Brand Home' %>
+<% title 'Brand Home | The Brand Reach' %>
 
 <div class="identity">
   <div class="wrapper-content">
