--- a/app/views/public/home.html.erb
+++ b/app/views/public/home.html.erb
@@ -1,6 +1,6 @@
 <%= stylesheet_link_tag 'brands_home', media: 'all', 'data-turbolinks-track' => true %>
 
-<% title 'Influencers Home' %>
+<% title 'Influencers Home | The Brand Reach' %>
 
 <div class="identity" xmlns="http://www.w3.org/1999/html">
   <div class="wrapper-content">
