1. New design for showing chat history in admin section 2. Table made for showing chat 3. Chat format refactored to show those in admin section 4. show profile for sender or receiver of chat in admin section

--- a/app/assets/stylesheets/brands-explore.css
+++ b/app/assets/stylesheets/brands-explore.css
@@ -92,6 +92,11 @@
     white-space: nowrap;
 }
 
+.influencer-profile-modal .influencer-address {
+    font-size: 13px;
+    width: 80%;
+}
+
 .influencer-data {
     margin: 10px 10px 17px;
 }
