--- a/app/views/campaigns/new.html.erb
+++ b/app/views/campaigns/new.html.erb
@@ -139,21 +139,21 @@
               <div class="form-group">
                 <%= f.label :name, 'Enter Campaign Name', class: 'control-label' %>
                 <div class="display-inline campaign-name-input">
-                  <%= f.text_field :name, 'data-parsley-required' => 'true' %>
+                  <%= f.text_field :name, 'data-parsley-required' => 'true', 'data-parsley-maxlength' => '250' %>
                 </div>
               </div>
 
               <div class="form-group remove-campaign-div">
-                <%= f.label :name, 'Description', class: 'control-label description-label' %>
+                <%= f.label :text, 'Description', class: 'control-label description-label' %>
                 <div class="display-inline campaign-name-input">
                   <%= f.text_area :text, rows: 4, class: 'campaign-description' %>
                 </div>
               </div>
 
               <div class="form-group remove-campaign-div">
-                <%= f.label :name, 'Headline', class: 'control-label' %>
+                <%= f.label :headline, 'Headline', class: 'control-label' %>
                 <div class="display-inline campaign-name-input">
-                  <%= f.text_field :headline, class: 'form-control' %>
+                  <%= f.text_field :headline, class: 'form-control', 'data-parsley-maxlength' => '250' %>
                 </div>
               </div>
 
