--- a/app/views/campaigns/new_brand_payment.html.erb
+++ b/app/views/campaigns/new_brand_payment.html.erb
@@ -56,7 +56,7 @@
     <dt>End Date </dt> <dd><%= @campaign.end_date.try(:strftime, '%d-%m-%Y') || 'NA' %></dd>
     <dt>Heading </dt> <dd><%= @campaign.headline.present? ? @campaign.headline : 'NA' %></dd>
     <dt>Description </dt> <dd><%= @campaign.text.present? ? @campaign.text : 'NA' %></dd>
-    <dt>Payment </dt> <dd><%= FacebookAccount.increase_price_for_brand(current_user, @campaign.cost) %> INR</dd>
+    <dt>Payment </dt> <dd><%= @campaign.cost %> INR</dd>
   </dl>
 
   <form method="post" action="https://secure.ccavenue.com/transaction/transaction.do?command=initiateTransaction">
