--- a/app/views/influencers/_profile_modal.erb
+++ b/app/views/influencers/_profile_modal.erb
@@ -92,7 +92,7 @@
               <div id="show-age-map" style="height: 325px;"></div>
 
               <script>
-                  var chart = AmCharts.makeChart( "show-age-map", {
+                  var chart1 = AmCharts.makeChart( "show-age-map", {
                       type: "serial",
                       depth3D: 30,
                       angle: 40,
@@ -142,6 +142,273 @@
             </div>
           </div>
         </div>
+
+        </br>
+        </br>
+        <span class="color-gray stat-gender">STATISTICS OF TOTAL ACTION BUTTON CLICKS BY GENDER AGE RANGE</span>
+        <div class="box">
+          <div class="box-body">
+            <div class="pad">
+              <!-- Map will be created here -->
+              <div id="show-action-age-map" style="height: 325px;"></div>
+            </div>
+          </div>
+        </div>
+
+        <script>
+          var chart = AmCharts.makeChart( "show-action-age-map", {
+            type: "serial",
+            depth3D: 30,
+            angle: 40,
+            colors: ["#a9e5ed", "#EA358C"],
+            legend: {
+              horizontalGap: 10,
+              useGraphSettings: true,
+              markerSize: 10
+            },
+
+            dataProvider: <%= @account.age_range_action_data.to_json.html_safe %>,
+
+            "valueAxes": [ {
+              "stackType": "regular",
+              "axisAlpha": 0,
+              "gridAlpha": 0
+            } ],
+
+            "graphs": [ {
+              "balloonText": "<b>[[title]]</b><br><span style='font-size:14px'>Age [[category]]: <b>[[value]]</b></span>",
+              "fillAlphas": 0.8,
+              "labelText": "[[value]]",
+              "lineAlpha": 0.4,
+              "title": "MALE",
+              "type": "column",
+              "color": "#000000",
+              "valueField": "male"
+            }, {
+              "balloonText": "<b>[[title]]</b><br><span style='font-size:14px'>Age [[category]]: <b>[[value]]</b></span>",
+              "fillAlphas": 0.8,
+              "labelText": "[[value]]",
+              "lineAlpha": 0.4,
+              "title": "FEMALE",
+              "type": "column",
+              "color": "#000000",
+              "valueField": "female"
+            } ],
+            "categoryField": "age_range",
+            "categoryAxis": {
+              "gridPosition": "start",
+              "axisAlpha": 0,
+              "gridAlpha": 0,
+              "position": "left"
+            }
+          });
+        </script>
+
+        </br>
+        </br>
+        <span class="color-gray stat-gender">STATISTICS OF PEOPLE WHO CLICKED ACTION BUTTON BY DEVICE</span>
+        <div class="box">
+          <div class="box-body">
+            <div class="pad">
+              <!-- Map will be created here -->
+              <div id="show-action-device-map" style="height: 325px;"></div>
+            </div>
+          </div>
+        </div>
+
+        <script>
+          var chart = AmCharts.makeChart( "show-action-device-map", {
+            type: "serial",
+            depth3D: 30,
+            angle: 40,
+            colors: ["#a9e5ed", "#EA358C"],
+            legend: {
+              horizontalGap: 60,
+              useGraphSettings: true,
+              markerSize: 10
+            },
+
+            dataProvider: <%= @account.action_device_data.to_json.html_safe %>,
+
+            "valueAxes": [ {
+              "stackType": "regular",
+              "axisAlpha": 0,
+              "gridAlpha": 0
+            } ],
+
+            "graphs": [ {
+              "balloonText": "<b>[[title]]</b><br><span style='font-size:14px'>[[category]]: <b>[[value]]</b></span>",
+              "fillAlphas": 0.8,
+              "labelText": "[[value]]",
+              "lineAlpha": 0.4,
+              "title": "PEOPLE ON MOBILE DEVICES",
+              "type": "column",
+              "color": "#000000",
+              "valueField": "mobile"
+            }, {
+              "balloonText": "<b>[[title]]</b><br><span style='font-size:14px'>[[category]]: <b>[[value]]</b></span>",
+              "fillAlphas": 0.8,
+              "labelText": "[[value]]",
+              "lineAlpha": 0.4,
+              "title": "PEOPLE ON COMPUTERS",
+              "type": "column",
+              "color": "#000000",
+              "valueField": "computer"
+            } ],
+            "categoryField": "user_group",
+            "categoryAxis": {
+              "gridPosition": "start",
+              "axisAlpha": 0,
+              "gridAlpha": 0,
+              "position": "left"
+            }
+          });
+        </script>
+
+        </br>
+        </br>
+        <section class="action-chart-info">
+          <span class="color-gray stat-gender">STATISTICS BY TOTAL ACTIONS ON PAGE</span>
+        </section>
+        </br>
+
+        <div class="action-chart">
+          <!-- Total Action Chart Canvas -->
+          <canvas id="actionChart" height="100"></canvas>
+        </div>
+        </br>
+        </br>
+
+        <script>
+          $( '#profile-modal' ).on('shown.bs.modal', function(e) {
+            // Get context with jQuery - using jQuery's .get() method.
+            var actionChartCanvas = $("#actionChart").get(0).getContext("2d");
+            // This will get the first returned node in the jQuery collection.
+            var actionChart = new Chart(actionChartCanvas);
+
+            var actionChartData = {
+              labels: <%= @account.action_line_chart_data[:labels].to_json.html_safe %>,
+              datasets: <%= @account.action_line_chart_data[:datasets].to_json.html_safe %>
+            };
+
+            var actionChartOptions = {
+              type: 'line',
+              //Boolean - If we should show the scale at all
+              //showScale: true,
+              //Boolean - Whether grid lines are shown across the chart
+              scaleShowGridLines: true,
+              //String - Colour of the grid lines
+              scaleGridLineColor: "rgba(0,0,0,.05)",
+              //Number - Width of the grid lines
+              scaleGridLineWidth: 1,
+              //Boolean - Whether to show horizontal lines (except X axis)
+              scaleShowHorizontalLines: true,
+              //Boolean - Whether to show vertical lines (except Y axis)
+              scaleShowVerticalLines: false,
+              //Boolean - Whether the line is curved between points
+              bezierCurve: true,
+              //Number - Tension of the bezier curve between points
+              bezierCurveTension: 0.3,
+              //Boolean - Whether to show a dot for each point
+              pointDot: false,
+              //Number - Radius of each point dot in pixels
+              pointDotRadius: 4,
+              //Number - Pixel width of point dot stroke
+              pointDotStrokeWidth: 1,
+              //Number - amount extra to add to the radius to cater for hit detection outside the drawn point
+              pointHitDetectionRadius: 20,
+              //Boolean - Whether to show a stroke for datasets
+              datasetStroke: true,
+              //Number - Pixel width of dataset stroke
+              datasetStrokeWidth: 2,
+              //Boolean - Whether to fill the dataset with a color
+              datasetFill: false,
+              //Boolean - whether to maintain the starting aspect ratio or not when responsive, if set to false, will take up entire container
+              maintainAspectRatio: false,
+              //Boolean - whether to make the chart responsive to window resizing
+              responsive: true
+            };
+
+            <% if @account.action_line_chart_data[:datasets].present? %>
+            //Create the line chart
+            actionChart.Line(actionChartData, actionChartOptions);
+            <% else %>
+            $('.action-chart-info').hide();
+            $('.action-chart').hide();
+            <% end %>
+          });
+        </script>
+
+        </br>
+        <section class="people-action-info">
+          <span class="color-gray stat-gender">STATISTICS BY PEOPLE WHO CLICKED ACTION BUTTON</span>
+        </section>
+
+        </br>
+        <div class="people-action-chart">
+          <canvas id="peopleActionChart" height="100"></canvas>
+        </div>
+        </br>
+
+        <script>
+          $( '#profile-modal' ).on('shown.bs.modal', function(e) {
+            // Get context with jQuery - using jQuery's .get() method.
+            var peopleActionChartCanvas = $("#peopleActionChart").get(0).getContext("2d");
+            // This will get the first returned node in the jQuery collection.
+            var peopleActionChart = new Chart(peopleActionChartCanvas);
+
+            var peopleActionChartData = {
+              labels: <%= @account.people_action_line_chart_data[:labels].to_json.html_safe %>,
+              datasets: <%= @account.people_action_line_chart_data[:datasets].to_json.html_safe %>
+            };
+
+            var peopleActionChartOptions = {
+              type: 'line',
+              //Boolean - If we should show the scale at all
+              //showScale: true,
+              //Boolean - Whether grid lines are shown across the chart
+              scaleShowGridLines: true,
+              //String - Colour of the grid lines
+              scaleGridLineColor: "rgba(0,0,0,.05)",
+              //Number - Width of the grid lines
+              scaleGridLineWidth: 1,
+              //Boolean - Whether to show horizontal lines (except X axis)
+              scaleShowHorizontalLines: true,
+              //Boolean - Whether to show vertical lines (except Y axis)
+              scaleShowVerticalLines: false,
+              //Boolean - Whether the line is curved between points
+              bezierCurve: true,
+              //Number - Tension of the bezier curve between points
+              bezierCurveTension: 0.3,
+              //Boolean - Whether to show a dot for each point
+              pointDot: false,
+              //Number - Radius of each point dot in pixels
+              pointDotRadius: 4,
+              //Number - Pixel width of point dot stroke
+              pointDotStrokeWidth: 1,
+              //Number - amount extra to add to the radius to cater for hit detection outside the drawn point
+              pointHitDetectionRadius: 20,
+              //Boolean - Whether to show a stroke for datasets
+              datasetStroke: true,
+              //Number - Pixel width of dataset stroke
+              datasetStrokeWidth: 2,
+              //Boolean - Whether to fill the dataset with a color
+              datasetFill: false,
+              //Boolean - whether to maintain the starting aspect ratio or not when responsive, if set to false, will take up entire container
+              maintainAspectRatio: false,
+              //Boolean - whether to make the chart responsive to window resizing
+              responsive: true
+            };
+
+            <% if @account.people_action_line_chart_data[:datasets].present? %>
+            //Create the line chart
+            peopleActionChart.Line(peopleActionChartData, peopleActionChartOptions);
+            <% else %>
+            $('.people-action-info').hide();
+            $('.people-action-chart').hide();
+            <% end %>
+          });
+        </script>
 
         <div class="color-gray stat-country bg-white">
 
